[package]
name = "apple-ble"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bluer = { version = "0.15.3", features = [
    "bluetoothd",
] }
config = "0.13.2"
tokio = { version = "1.22.0", features = ["full"] }
async-trait = { version = "0.1.58", optional = true }
sha2 = "0.10.6"
uuid = { version = "1.2.2", features = ["v4"] }

[features]
default = []
# AFIT = async_fn_in_trait
disable_afit = ["dep:async-trait"]