[package]
name = "apple-ble"
version = "0.2.2"
edition = "2021"
description = "A library for interfacing with apple devices via BLE."
license = "MIT AND Apache-2.0"
repository = "https://github.com/Frostie314159/apple-ble"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bluer = { version = "0.15.3", features = [
    "bluetoothd",
] }
config = "0.13.2"
tokio = { version = "1.22.0", features = ["full"] }
async-trait = "0.1.58"
sha2 = "0.10.6"
uuid = { version = "1.2.2", features = ["v4"] }
sudo = "0.6.0"
systemctl = "0.1.8"
eui48 = { version = "1.1.0", default-features = false }
futures = "0.3.25"
clap = { version = "4.0.29", optional = true }

[features]
default = []
# AFIT = async_fn_in_trait
enable_afit = []
cli = ["dep:clap"]

[[bin]]
name = "cli"
required_features = ["cli"]